2007-01-19  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyList.py: remove loop
	* src/PageView.py: check for null model

2007-01-19  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsInMemDB.py: Support the cached surname list.
	* src/GrampsDb/_GrampsBSDDB.py: Support the cached surname list.
	* src/GrampsDb/_GrampsDbBase.py: Support the cached surname list.

2007-01-18  Don Allingham  <don@gramps-project.org>
	* src/DataViews/Utils.py: add profile function

2007-01-18 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
        * src/NameDisplay.py: yet more optimisations for name display.

2007-01-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_PedigreeView.py: Cache result of probably_alive(); Call
	find_tree() only once for all sizes; Cache results in FormattingHelper;

2007-01-17  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: optimizations
	* src/ViewManager.py: optimizations
	* src/gramps_main.py: optimizations
	* src/PageView.py: optimizations

2007-01-17  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportDialog.py: 0000832: Please enable cm/inch toggle in
	  custom size for relationship graph
	* src/plugins/NarrativeWeb.py: Add addresses to individual page.

2007-01-17 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
        * src/NameDisplay.py (_format_str_base): enable new implementation

2007-01-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DisplayModels/_PeopleModel.py: fix MarkerType.TODO_TYPE
	* src/DataViews/_PersonView.py: Expand all nodes on interactive search

2007-01-16  Alex Roitman  <shura@gramps-project.org>
	* src/NameDisplay.py (set_name_format): Use hard-coded methods for
	the pre-set name displays formats.

2007-01-16  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: handle missing place in LDS ord
	* src/DataViews/_PersonView.py: optimization
	* src/ViewManager.py: remove double build call