@@ -1,4 +1,6 @@
 2007-01-19  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_GrampsDbBase.py: add append_list task
+	* src/GrampsDb/_ReadGrdb.py: copy bookmarks properly on import
 	* src/DataViews/_FamilyList.py: remove loop
 	* src/PageView.py: check for null model
 
